fixing bus in runtime, still working on it